gitops/apps/envoy-gateway-resources/httproute-garage-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-web
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "*.web.garage.homelab.local"
  rules:
  - backendRefs:
    - name: garage
      namespace: garage
      port: 3902
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: garage-web-backend
  namespace: garage
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: envoy-gateway-system
  to:
  - group: ""
    kind: Service
    name: garage
